--- a/index.html
+++ b/index.html
@@ -1,73 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <title>Coming soon!</title>
-    <style>
-        html,
-        body {
-            width: 100%;
-            height: 100%;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>LochanaXploit | Ethical Hacking Services</title>
+  <link rel="stylesheet" href="style.css" />
+   <meta charset="utf-8">
+   <script>
+  // Disable right click
+  document.addEventListener('contextmenu', e => e.preventDefault());
 
-        html {
-            display: table;
-            font-family: Lato, "Segoe UI", Avenir, Ubuntu, Tahoma, Verdana, Helvetica, sans-serif;
-        }
+  // Try to block common devtools / view-source hotkeys
+  document.addEventListener('keydown', function(e) {
+    // F12, Ctrl+Shift+I, Ctrl+Shift+J, Ctrl+U, Ctrl+Shift+C
+    if (e.key === 'F12' ||
+        (e.ctrlKey && e.shiftKey && ['I','J','C'].includes(e.key.toUpperCase())) ||
+        (e.ctrlKey && e.key.toLowerCase() === 'u')) {
+      e.preventDefault();
+    }
+    // Block Ctrl+A / Ctrl+C if you want (optional)
+    if ((e.ctrlKey || e.metaKey) && (e.key === 'a' || e.key === 'c')) {
+      e.preventDefault();
+    }
+  });
+</script>
 
-        body {
-            display: table-cell;
-            vertical-align: middle;
-            text-align: center;
-        }
 
-        h1 {
-            font-size: 4em;
-            font-weight: normal;
-            text-transform: lowercase;
-        }
-
-        svg {
-            width: 250px;
-            height: 250px;
-        }
-    </style>
+</script>
+  
 </head>
 <body>
-    <!-- Customize Icon Color -->
-    <!-- https://www.flaticon.com/free-icon/fast-time_2972562?term=clock&page=1&position=27# -->
-    <?xml version="1.0"?>
-    <svg xmlns="http://www.w3.org/2000/svg" id="coming_soon" enable-background="new 0 0 512 512" height="512px" viewBox="0 0 512 512" width="512px">
-        <g>
-            <g>
-                <circle cx="319.528" cy="256" fill="#95d6a4" r="184.972" data-original="#95D6A4" class="active-path" style="fill:#E33B3B" data-old_color="#95d6a4" />
-                <path d="m319.528 71.029c-4.682 0-9.322.178-13.917.52 95.656 7.115 171.055 86.976 171.055 184.451s-75.399 177.336-171.055 184.452c4.595.342 9.235.52 13.917.52 102.157-.001 184.972-82.815 184.972-184.972s-82.815-184.971-184.972-184.971z" fill="#78c2a4" data-original="#78C2A4" class="" style="fill:#FB5252" data-old_color="#78c2a4" />
-                <circle cx="319.528" cy="256" fill="#f4fbff" r="142.033" data-original="#F4FBFF" class="" style="fill:#F4FBFF" />
-                <path d="m319.528 113.967c-4.321 0-8.594.204-12.817.582 72.435 6.48 129.215 67.33 129.215 141.451s-56.78 134.97-129.215 141.451c4.223.377 8.496.582 12.817.582 78.443 0 142.033-63.59 142.033-142.032 0-78.444-63.59-142.034-142.033-142.034z" fill="#daf1f4" data-original="#DAF1F4" class="" />
-                <g>
-                    <path d="m38.872 149.21h79.098c4.142 0 7.5-3.357 7.5-7.5s-3.358-7.5-7.5-7.5h-79.098c-4.142 0-7.5 3.357-7.5 7.5s3.357 7.5 7.5 7.5z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m115.258 185.317h-31.246c-4.142 0-7.5 3.357-7.5 7.5s3.358 7.5 7.5 7.5h31.246c4.142 0 7.5-3.357 7.5-7.5s-3.358-7.5-7.5-7.5z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m7.5 237.327h76.512c4.142 0 7.5-3.357 7.5-7.5s-3.358-7.5-7.5-7.5h-76.512c-4.142 0-7.5 3.357-7.5 7.5s3.358 7.5 7.5 7.5z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m125.47 370.289c0-4.143-3.358-7.5-7.5-7.5h-79.098c-4.142 0-7.5 3.357-7.5 7.5s3.358 7.5 7.5 7.5h79.098c4.142 0 7.5-3.357 7.5-7.5z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m115.258 311.683h-31.246c-4.142 0-7.5 3.357-7.5 7.5s3.358 7.5 7.5 7.5h31.246c4.142 0 7.5-3.357 7.5-7.5s-3.358-7.5-7.5-7.5z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m91.512 282.173c0-4.143-3.358-7.5-7.5-7.5h-76.512c-4.142 0-7.5 3.357-7.5 7.5s3.358 7.5 7.5 7.5h76.512c4.142 0 7.5-3.357 7.5-7.5z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m319.529 165.83c4.143 0 7.5-3.357 7.5-7.5v-11.448c0-4.143-3.357-7.5-7.5-7.5s-7.5 3.357-7.5 7.5v11.448c0 4.143 3.357 7.5 7.5 7.5z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m401.99 173.538c-2.93-2.928-7.678-2.928-10.607 0l-8.095 8.095c-2.929 2.93-2.929 7.678 0 10.607 2.931 2.929 7.678 2.928 10.607 0l8.095-8.095c2.928-2.929 2.928-7.677 0-10.607z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m417.199 248.5c-4.143 0-7.5 3.357-7.5 7.5s3.357 7.5 7.5 7.5h11.447c4.143 0 7.5-3.357 7.5-7.5s-3.357-7.5-7.5-7.5z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m393.895 319.759c-2.93-2.928-7.678-2.928-10.607 0-2.929 2.93-2.929 7.678 0 10.607l8.095 8.095c2.931 2.929 7.678 2.928 10.607 0 2.929-2.93 2.929-7.678 0-10.607z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m312.029 353.67v11.447c0 4.143 3.357 7.5 7.5 7.5s7.5-3.357 7.5-7.5v-11.447c0-4.143-3.357-7.5-7.5-7.5s-7.5 3.358-7.5 7.5z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m245.162 319.759-8.095 8.095c-2.929 2.93-2.929 7.678 0 10.607 2.93 2.929 7.678 2.928 10.606 0l8.095-8.095c2.929-2.93 2.929-7.678 0-10.607-2.928-2.928-7.677-2.928-10.606 0z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m210.411 248.5c-4.142 0-7.5 3.357-7.5 7.5s3.358 7.5 7.5 7.5h11.448c4.142 0 7.5-3.357 7.5-7.5s-3.358-7.5-7.5-7.5z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m255.769 181.633-8.095-8.095c-2.929-2.928-7.678-2.928-10.606 0-2.929 2.93-2.929 7.678 0 10.607l8.095 8.095c2.93 2.929 7.678 2.928 10.606 0 2.929-2.929 2.929-7.677 0-10.607z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m359.859 256c0-4.143-3.357-7.5-7.5-7.5h-25.33v-55.684c0-4.143-3.357-7.5-7.5-7.5s-7.5 3.357-7.5 7.5v63.184c0 4.143 3.357 7.5 7.5 7.5h32.83c4.142 0 7.5-3.357 7.5-7.5z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m461.741 254.762c4.135-.251 7.283-3.806 7.032-7.94-4.771-78.703-70.327-140.354-149.245-140.354-82.452 0-149.532 67.08-149.532 149.533 0 82.452 67.08 149.532 149.532 149.532 73.869 0 136.9-54.122 147.865-127.157.615-4.096-2.207-7.915-6.304-8.53-4.086-.613-7.915 2.206-8.53 6.304-9.85 65.614-66.506 114.384-133.031 114.384-74.181 0-134.532-60.351-134.532-134.532s60.351-134.533 134.532-134.533c71.001 0 129.98 55.461 134.272 126.263.25 4.132 3.802 7.27 7.941 7.03z" data-original="#000000" class="" style="fill:#000000" />
-                    <path d="m319.528 63.529c-26.381 0-52.228 5.473-76.018 15.708h-132.329c-4.142 0-7.5 3.357-7.5 7.5s3.358 7.5 7.5 7.5h104.113c-14.077 9.06-27.036 19.988-38.462 32.604-2.78 3.069-2.546 7.812.524 10.593 3.071 2.781 7.812 2.546 10.594-.524 33.602-37.102 81.561-58.381 131.578-58.381 97.858 0 177.472 79.613 177.472 177.471 0 97.857-79.613 177.471-177.472 177.471-97.858 0-177.471-79.613-177.471-177.471 0-34.268 9.789-67.528 28.307-96.186 2.248-3.479 1.25-8.121-2.229-10.369-3.479-2.247-8.121-1.251-10.37 2.229-20.09 31.088-30.708 67.163-30.708 104.326 0 67.766 35.206 127.458 88.285 161.763h-104.16c-4.142 0-7.5 3.357-7.5 7.5s3.358 7.5 7.5 7.5h132.225c23.36 10.099 49.097 15.708 76.122 15.708 106.128 0 192.471-86.342 192.471-192.471s-86.343-192.471-192.472-192.471z" data-original="#000000" class="" style="fill:#000000" />
-                </g>
-            </g>
-        </g>
-    </svg>
-    <h1>Coming soon!</h1>
+
+  <header>
+
+<a href="#home" class="logo" style="text-decoration: none;">LochanaXploit</a>
+
+
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#services">Services</a>
+      <a href="#about">About</a>
+      <a href="contact.html">Contact</a>
+
+    </nav>
+  </header>
+
+  <section class="hero" id="home">
+    <h1>Protect Your Digital Space</h1>
+    <p>Affordable ethical hacking & cyber security solutions for individuals & small businesses.</p>
+    <a href="#services" class="cta-button">Explore Services</a>
+  </section>
+
+  <section class="services" id="services">
+    <h2>My Services</h2>
+    <div class="service-cards">
+      <div class="card">
+        <h3>✅ Basic Ethical Hacking</h3>
+        <p>I use tools and techniques to find common security weaknesses.</p>
+        <br>
+            <a href="contact.html" class="cta-button">Get service</a>
+      </div>
+      <div class="card">
+        <h3>✅ Malware Scanning</h3>
+        <p>I scan systems and websites for malware infections.</p>
+         <br>
+            <a href="contact.html" class="cta-button">Get service</a>
+      </div>
+      <div class="card">
+        <h3>✅ URL Scanning</h3>
+        <p>I check links and websites for phishing or malicious content.</p>
+         <br>
+            <a href="contact.html" class="cta-button">Get service</a>
+      </div>
+      <div class="card">
+        <h3>✅ Simple Security Checks</h3>
+        <p>I provide basic assessments for websites and devices.</p>
+         <br>
+            <a href="contact.html" class="cta-button">Get service</a>
+      </div>
+       <div class="card">
+        <h3>✅ OSINT & Metadata Analysis</h3>
+        <p>I gather public information and hidden metadata to help identify digital footprints and possible threats.</p>
+         <br>
+            <a href="contact.html" class="cta-button">Get service</a>
+      </div>
+      <div class="card">
+        <h3>✅ Email Security Check</h3>
+        <p>I Check if your email is safe & help your secure is better.</p>
+         <br><br> <br><br>
+            <a href="contact.html" class="cta-button">Get service</a>
+      </div>
+      <div class="card">
+        <h3>✅ File Scanning</h3>
+        <p>I scan any files you provide to check for viruses.</p>
+         <br><br> <br><br>
+            <a href="contact.html" class="cta-button">Get service</a>
+      </div>
+      <div class="card">
+        <h3>✅ Account Recovery Assistance</h3>
+        <p>I help you recover access to your lost or hacked online accounts.</p>
+         <br><br><br>
+            <a href="contact.html" class="cta-button">Get service</a>
+      </div>
+       <div class="card">
+        <h3>✅ Social Media Privacy & Security Check</h3>
+        <p>I review your social media accounts and guide you to make them more private and secure.</p>
+         <br><br>
+            <a href="contact.html" class="cta-button">Get service</a>
+      </div>
+      <div class="card">
+        <h3>✅ Computer Troubleshooting</h3>
+        <p>I provide basic PC/laptop troubleshooting support for common issues, performance problems, and software errors.</p>
+         <br>
+            <a href="contact.html" class="cta-button">Get service</a>
+      </div>
+      <div class="card">
+        <h3>✅  Web Designing</h3>
+        <p>I create visually appealing, user-friendly, and mobile-responsive websites tailored for individuals, startups, and small businesses.</p>
+         <br><br>
+            <a href="contact.html" class="cta-button">Get service</a>
+      </div>
+      <div class="card">
+        <h3>✅ Web Hosting</h3>
+        <p>I will help you take your website live with fast and reliable hosting options.</p>
+         <br><br><br>
+            <a href="contact.html" class="cta-button">Get service</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="about" id="about">
+
+    <h2>👨‍💻 About Me</h2>
+    <p>🧠 I’m currently studying and following cybersecurity courses (like Cisco Ethical Hacking).</p>
+    <p>🔎 I enjoy learning by doing and helping others stay safe online.</p>
+    <p>💬 I always explain things clearly—no complex tech talk!</p>
+    <p>🤝 I’m reliable, responsive, and easy to work with.</p>
+
+    <h2>🚀 Why Choose Me?</h2>
+    <p>I’m perfect for small tasks or budget-friendly services.</p>
+    <p>I’m still learning, but I work carefully and honestly.</p>
+    <p>You’ll receive clear reports and friendly support.</p>
+
+    <h2>⚙️ Tools I Use</h2>
+    <p>Nmap, VirusTotal, Shodan, Maltrail, and other open-source tools.</p>
+    <p>🔐 Whether you want a quick malware scan, a URL check, or a basic security opinion, I’m here to help — and I’ll always do my best to keep your digital world safe.</p>
+     <!-- transparent overlay (blocks selection/clicks on underlying text) -->
+    <div class="overlay" id="overlay"></div>
+  </div>
+
+
+  </section>
+
+  <footer>
+    <p>© 2025 LochanaXploit. All rights reserved.</p>
+    <div class="social">
+      <a href="https://wa.me/message/GU4VWVJDCT6IL1">Whatsapp</a>
+      <a href="https://linkedin.com/in/lochana-manuth">LinkedIn</a>
+      <a href="https://github.com/Lochana-1">GitHub</a>
+    </div>
+  </footer>
+
 </body>
 </html>
